--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,11 +1,13 @@
 .header
     display: flex
+    justify-content: space-between
     &__menu
         display: flex
         align-items: center
         list-style-type: none
+        margin-right: 18%
         margin-bottom: 0
-        margin-left: 72px
+
         li
             margin-right: 35px
             &:nth-child(5)
@@ -13,7 +15,6 @@
         a
             color: #555555
     &__contacts
-        margin-left: 255px
         img
             margin-right: 10px
         &-phone
