--- a/src/sass/blocks/_slider.sass
+++ b/src/sass/blocks/_slider.sass
@@ -1,8 +1,6 @@
 .slider
-    position: relative
     margin-top: 17px
     &__wrapper
-        display: flex
     &__item
         width: 285px
         height: 355px
@@ -11,6 +9,7 @@
         background-repeat: no-repeat
         background-position: 100% 18%
         border-radius: 20px
+        margin: 0 auto
         &-title
             font-size: 25px
             line-height: 29px
@@ -67,38 +66,44 @@
             background-repeat: no-repeat
             background-position: 100% 0%
 
-    &__prev
-        position: absolute
-        width: 60px
-        height: 60px
-        background: #FFFFFF
-        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12)
-        transform: matrix(-1, 0, 0, 1, 0, 0)
-        border-radius: 100%
-        top: 62%
-        left: 130px
-        cursor: pointer
-        text-align: center
-        line-height: 54px
-        font-size: 25px
-        &:focus
-            outline: none
-    &__next
-        position: absolute
-        width: 60px
-        height: 60px
-        background: #FFFFFF
-        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12)
-        transform: matrix(-1, 0, 0, 1, 0, 0)
-        border-radius: 100%
-        top: 62%
-        right: 130px
-        cursor: pointer
-        text-align: center
-        line-height: 54px
-        font-size: 25px
-        &:focus
-            outline: none
+    &__arrows
+        position: relative
+        &-prev
+            position: absolute
+            width: 60px
+            height: 60px
+            background: #FFFFFF
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12)
+            border-radius: 100%
+            bottom: 140px
+            left: -74px
+            cursor: pointer
+            text-align: center
+            line-height: 54px
+            font-size: 25px
+            border: 2px solid
+            &:focus
+                outline: none
+        &-next
+            position: absolute
+            width: 60px
+            height: 60px
+            background: #FFFFFF
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12)
+            border-radius: 100%
+            bottom: 140px
+            right: -74px
+            cursor: pointer
+            text-align: center
+            line-height: 54px
+            font-size: 25px
+            border: 2px solid
+            &:focus
+                outline: none
+
+
+
+
 
 
 
