--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,9 +7,11 @@
     padding: 0
 
 .container
+    position: relative
     max-width: 1200px
     margin: 0 auto
 
 @import 'blocks/promo'
 @import 'blocks/header'
 @import 'blocks/slider'
+@import 'blocks/media'
