--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -11,6 +11,8 @@
     .container
         max-width: 960px 
     .header
+        &__nav
+            width: 700px
         &__menu
             margin: 0px
     .slider
@@ -23,6 +25,84 @@
 @media (max-width: 992px)
     .container
         max-width: 720px 
+    .header
+        &__nav
+            position: fixed
+            flex-direction: column
+            justify-content: center
+            align-items: flex-end
+            top: 0
+            left: -100%
+            width: 50%
+            height: 100vh
+            // padding: 20px 25px 20px 0px
+            background-color: rgba(0,0,0,.8)
+            z-index: 2
+            transition: .6s all
+            &_active
+                left: 0
+            
+        &__menu
+            width: 100%
+            flex-direction: column
+            justify-content: center
+            align-items: flex-end
+            text-align: right
+            li
+                padding: 15px 0
+                margin: 0
+                padding-left: 318px
+            a
+                font-size: 25px
+                color: #fff
+                text-transform: uppercase
+                text-decoration: none
+                padding: 20px 20px 20px 375px     
+                &:hover
+                    background-color: rgba(255,255,255, .6)
+                    color: #000
+                
+        &__contacts
+            margin-top: 40px
+            display: flex
+            flex-direction: column
+            align-items: flex-end
+            li
+                padding: 15px 0
+                display: flex
+                align-items: center
+                padding-right: 20px
+                a
+                    font-size: 25px
+                    color: #fff
+                    // text-decoration: none
+                    padding: 1px 1px 1px 1px
+                
+    .hamburger
+        position: absolute
+        display: block
+        right: 0
+        top: 50%
+        transform: translateY(-50%)
+        width: 40px
+        height: 20px
+        span
+            display: block
+            height: 3px
+            width: 100%
+            background-color: #000
+            margin-bottom: 7px
+            transition: .5s all
+        &_active
+            span
+                margin-bottom: -2px
+                &:nth-child(1)
+                    transform: translateY(8px) rotate(-45deg)
+                &:nth-child(2)
+                    display: none
+                &:nth-child(3)
+                    transform: translateY(8px) rotate(45deg)
+            
     .slider
         max-width: 300px
     .slider__arrows-prev
@@ -47,8 +127,18 @@
     .slider
         max-width: 300px
     .slider__arrows-prev
-        left: 180px
-        bottom: -70px
+        display: none
     .slider__arrows-next
-        right: 180px
-        bottom: -70px
+        display: none
+    .promo
+        &__title
+            font-size: 45px
+            line-height: 53px
+            text-align: center
+    .header
+        &__nav
+            width: 84%
+        &__contacts
+            li
+                a
+                    font-size: 23px
