--- a/src/sass/blocks/_slider.sass
+++ b/src/sass/blocks/_slider.sass
@@ -1,4 +1,5 @@
 .slider
+    z-index: 3
     margin-top: 17px
     &__wrapper
     &__item
@@ -81,6 +82,7 @@
             text-align: center
             line-height: 54px
             font-size: 25px
+            z-index: 3
             &:focus
                 outline: none
         &-next
@@ -96,6 +98,7 @@
             text-align: center
             line-height: 54px
             font-size: 25px
+            z-index: 3
             &:focus
                 outline: none
 
