--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -150,9 +150,11 @@
         line-height: 36px
         left: 10px
         background-color: rgba(255,255,255,.5)
+        bottom: 150px
     .slider__arrows-next
         width: 40px
         height: 40px
         line-height: 36px
         right: 10px
         background-color: rgba(255,255,255,.5)
+        bottom: 150px
